# whisper_lambda_cpp

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE  Makefile  README.md  bootstrap.cpp  common.cpp  common.h  handler.h  json_output.h  main.cpp  s3_audio_processing.cpp  s3_audio_processing.h  samconfig.toml  tempfile.h  template.yaml  test_main.cpp  transcription.cpp  transcription.h
events/: event-small-en.json  event.json
